--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -175,20 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.16 , 0.166, 0.188, 0.16 , 0.326]),\n",
-       " np.float64(-700.0000000000001),\n",
+       "(array([0.04194304, 0.04958469, 0.08975333, 0.0616843 , 0.75703464]),\n",
+       " -1532.5745727118751,\n",
        " False,\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,20 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.8 , 0.13, 0.02, 0.  , 0.05]),\n",
-       " np.float64(-258.5999999999999),\n",
-       " False,\n",
-       " False,\n",
-       " {})"
+       "(array([0.8 , 0.13, 0.02, 0.  , 0.05]), -258.5999999999999, False, False, {})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +228,7 @@
        "(array([0.2, 0.2, 0.2, 0.2, 0.2]), {})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,16 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.16 , 0.166, 0.188, 0.16 , 0.326]), np.int64(-300), False, False, {})"
+       "(array([0.04194304, 0.04958469, 0.08975333, 0.0616843 , 0.75703464]),\n",
+       " np.int64(-2000),\n",
+       " False,\n",
+       " False,\n",
+       " {})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.8 , 0.13, 0.02, 0.  , 0.05]), np.int64(-800), False, False, {})"
+       "(array([0.8 , 0.13, 0.02, 0.  , 0.05]), np.int64(-120), False, False, {})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "(array([0.2, 0.2, 0.2, 0.2, 0.2]), {})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,20 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.6667, 0.1925, 0.0376, 0.0042, 0.099 ]),\n",
-       " array([-285.2175,   -7.    ]),\n",
+       "(array([0.23364, 0.21814, 0.15606, 0.09038, 0.30178]),\n",
+       " array([-834.0192,   -7.    ]),\n",
        " False,\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "matrix-pomdp-gym",
+   "display_name": "test02",
    "language": "python",
    "name": "python3"
   },
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
